--- a/cs/team.html
+++ b/cs/team.html
@@ -171,7 +171,6 @@
                     </span>
                     <span class="item__image ibg"><img src="../assets/img/team/1.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a>
                 </div>
-        
                 <div class="team__column">
                     <a class="block-team__item block-team__item_b item" href="#">
                     <span class="logo__item">
@@ -247,9 +246,6 @@
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
                         <p class="item__person-name">Alexander<span class="item__person-role">iOS developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/24.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
-                    <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-                        <p class="item__person-name">Sofia<span class="item__person-role">Team lead, android developer</span></p>
-                    </span><span class="item__image ibg"><img src="../assets/img/team/25.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
                         <p class="item__person-name">Kirill<span class="item__person-role">Android developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/26.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
@@ -277,75 +273,55 @@
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
                         <p class="item__person-name">Jaroslav <span class="item__person-role">Android developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/34.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
-                    
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
                     <p class="item__person-name">Kirill<span class="item__person-role">Web Developer (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/50.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                         <p class="item__person-name eng-item__person-name">Vyacheslav <span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/35.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Ivan <span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/36.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                         <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/37.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                   <p class="item__person-name">Ivan <span class="item__person-role">Flutter desktop (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/52.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Nursultan<span class="item__person-role">Web Developer (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/53.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Argen<span class="item__person-role">Flutter desktop (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/49.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Vyacheslav<span class="item__person-role">Flutter Developer (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/48.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Farkhat<span class="item__person-role">Flutter Developer (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/51.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                         <p class="item__person-name">Alena <span class="item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/38.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
-                        <p class="item__person-name">Kirill <span class="item__person-role">QA</span></p>
+                        <p class="item__person-name">Kirill <span class="item__person-role">Team lead, QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/39.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
-                        <p class="item__person-name">Amelia <span class="item__person-role">QA</span></p>
-                    </span><span class="item__image ibg"><img src="../assets/img/team/40.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
-                <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
                         <p class="item__person-name">Andrey <span class="item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/41.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
                     <p class="item__person-name">Elena<span class="item__person-role">QA</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/42.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
                     <p class="item__person-name">Daria<span class="item__person-role">UX/UI designer</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/43.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
                     <p class="item__person-name">Olesya<span class="item__person-role">Copywriter-editor</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/44.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
                     <p class="item__person-name">Ruslan<span class="item__person-role">Specialist in working with forums</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/45.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
-
                 <p class="item__person-name">Natalya<span class="item__person-role">Manager</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/46.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person item__person-cs"><img />
