--- a/en/team.html
+++ b/en/team.html
@@ -168,7 +168,6 @@
                     </span>
                     <span class="item__image ibg"><img src="../assets/img/team/1.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a>
                 </div>
-        
                 <div class="team__column team__column-cs">
                     <a class="block-team__item block-team__item_b item" href="#">
                     <span class="logo__item">
@@ -180,18 +179,15 @@
                 </div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person item__person-cs"><img />
                         <p class="item__person-name eng-item__person-name">Diane<span class="item__person-role eng-item__person-role">CMO</span></p>
-
                     </span><span class="item__image ibg"><img src="../assets/img/team/3.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Vladimir <span class="item__person-role eng-item__person-role">CTO, Golang developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/4.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                         <p class="item__person-name eng-item__person-name">Aubakir <span class="item__person-role eng-item__person-role">System Analyst, QA Engineer</span></p>
                     </span><span class="item__image ibg"><img  src="../assets/img/team/5.png"class="team__photo" alt="Фото участника команды SFERA" /></span></a></div>
                 <div class="team__column team__column-cs"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person item__person-cs"><img />
                         <p class="item__person-name eng-item__person-name">Alexander <span class="item__person-role eng-item__person-role">Back-end developer</span></p>
-
                     </span><span class="item__image ibg"><img src="../assets/img/team/6.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Ruslan <span class="item__person-role eng-item__person-role">Back-end developer</span></p>
@@ -247,7 +243,6 @@
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">iOS developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/24.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
-
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Kirill<span class="item__person-role eng-item__person-role">Android developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/26.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
@@ -276,73 +271,54 @@
                         <p class="item__person-name eng-item__person-name">Jaroslav <span class="item__person-role eng-item__person-role">Android developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/34.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                   <p class="item__person-name">Kirill<span class="item__person-role">Web Developer (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/50.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                         <p class="item__person-name eng-item__person-name">Vyacheslav <span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/35.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Ivan <span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/36.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                         <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">Web Developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/37.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                   <p class="item__person-name">Ivan <span class="item__person-role">Flutter desktop (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/52.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Nursultan<span class="item__person-role">Web Developer (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/53.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Argen<span class="item__person-role">Flutter desktop (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/49.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Vyacheslav<span class="item__person-role">Flutter Developer (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/48.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Farkhat<span class="item__person-role">Flutter Developer (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/51.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-
-
-
-
                         <p class="item__person-name eng-item__person-name">Alena <span class="item__person-role eng-item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/38.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
-                        <p class="item__person-name eng-item__person-name">Kirill <span class="item__person-role eng-item__person-role">Team lead</span></p>
+                        <p class="item__person-name eng-item__person-name">Kirill <span class="item__person-role eng-item__person-role">Team lead, QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/39.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                         <p class="item__person-name eng-item__person-name">Andrey <span class="item__person-role eng-item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/41.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                     <p class="item__person-name eng-item__person-name">Elena<span class="item__person-role eng-item__person-role">QA</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/42.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                     <p class="item__person-name eng-item__person-name">Daria<span class="item__person-role eng-item__person-role">UX/UI designer</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/43.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                     <p class="item__person-name eng-item__person-name">Olesya<span class="item__person-role eng-item__person-role">Copywriter-editor</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/44.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                     <p class="item__person-name eng-item__person-name">Ruslan<span class="item__person-role eng-item__person-role">Specialist in working with forums</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/45.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
                 <p class="item__person-name eng-item__person-name">Natalya<span class="item__person-role eng-item__person-role">Manager</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/46.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
