--- a/ru/team.html
+++ b/ru/team.html
@@ -172,7 +172,6 @@
                     </span>
                     <span class="item__image ibg"><img src="../assets/img/team/1.png" class="team__photo" alt="Фото участника команды SFERA" /></span></a>
                 </div>
-        
                 <div class="team__column">
                     <a class="block-team__item block-team__item_b item" href="#">
                     <span class="logo__item">
@@ -248,9 +247,6 @@
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
                         <p class="item__person-name">Александр<span class="item__person-role">IOS разработчик (стажер)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/24.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
-                    <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-                        <p class="item__person-name">Софья<span class="item__person-role">Team lead, android разработчик</span></p>
-                    </span><span class="item__image ibg"><img src="../assets/img/team/25.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
                         <p class="item__person-name">Кирилл<span class="item__person-role">Android разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/26.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
@@ -279,80 +275,57 @@
                         <p class="item__person-name">Ярослав <span class="item__person-role">Android разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/34.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Кирилл<span class="item__person-role">Web разработчик (стажер)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/50.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                         <p class="item__person-name">Вячеслав <span class="item__person-role">Web разработчик (стажер)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/35.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
                         <p class="item__person-name">Иван <span class="item__person-role">Web разработчик (стажер)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/36.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                         <p class="item__person-name">Александр<span class="item__person-role">Web разработчик (стажер)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/37.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Иван<span class="item__person-role">Flutter разработчик (стажер)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/52.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Нурсултан<span class="item__person-role">Web разработчик (стажер)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/53.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Арген<span class="item__person-role">Flutter разработчик(стажер) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/49.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Вячеслав<span class="item__person-role">Flutter разработчик(стажер) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/48.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Фархат<span class="item__person-role">Flutter разработчик(стажер) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/51.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
-
                         <p class="item__person-name">Алена <span class="item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/38.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
-                        <p class="item__person-name">Кирилл <span class="item__person-role">QA</span></p>
+                        <p class="item__person-name">Кирилл <span class="item__person-role">Team lead, QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/39.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
-                    
-                        <p class="item__person-name">Амелия <span class="item__person-role">QA</span></p>
-                    </span><span class="item__image ibg"><img src="../assets/img/team/40.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
-                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                         <p class="item__person-name">Андрей <span class="item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/41.png" class="team__photo" alt="Фото участника команды SFERA" oading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Елена<span class="item__person-role">QA</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/42.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Дарья<span class="item__person-role">UX/UI дизайнер</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/43.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Олеся<span class="item__person-role">Копирайтер-редактор</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/44.png" class="team__photo" alt="Фото участника команды SFERA"  loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                     <p class="item__person-name">Руслан<span class="item__person-role">Специалист по работе с форумами</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/45.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                 <p class="item__person-name">Наталья<span class="item__person-role">Менеджер</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/46.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
-
                 <p class="item__person-name">Адмирал Генерал<span class="item__person-role">Виновник всех багов</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/47.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
             </div>
